hphp/hack/test/typecheck/xhp_attribute_coeffect.php.constraint_method_call.exp
ERROR: File "xhp_attribute_coeffect.php", line 8, characters 4-6:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "xhp_attribute_coeffect.php", line 7, characters 17-18:
  From this declaration, the context of this function body provides the capability set {}
  File "XHPTest.hhi", line 4, characters 19-29:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
ERROR: File "xhp_attribute_coeffect.php", line 12, characters 3-13:
Typing error (Typing[4403])
  File "xhp_attribute_coeffect.php", line 11, characters 26-27:
  Expected a function that requires the capability set {}
  File "XHPTest.hhi", line 11, characters 19-30:
  But got a function that requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
